<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.soccerbuddy.ui.SkillLevelPickerFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_spacer1"
        android:layout_marginStart="@dimen/grid_spacer1"
        android:text="@string/label_skillLevel"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/skillLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_spacer1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/selected_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_spacer1"
            android:button="@drawable/ic_level_easy"
            android:contentDescription="@string/description_easy" />

        <RadioButton
            android:id="@+id/moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_spacer1"
            android:button="@drawable/ic_level_moderate"
            android:contentDescription="@string/description_moderate" />

        <RadioButton
            android:id="@+id/competitive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_level_competitive"
            android:contentDescription="@string/description_competitive" />

    </RadioGroup>

    <TextView
        android:id="@+id/selected_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/skillLevels" />

</android.support.constraint.ConstraintLayout>