<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewMatchActivity">

    <LinearLayout
        android:id="@+id/layout_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/label_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="A soccer match" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_preview_height"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_fixture_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/fixture_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="@tools:sample/date/ddmmyy" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_fixture_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/kickoff_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="@tools:sample/date/hhmm" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_skillLevel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/skilllevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="Easy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/label_players"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/players_required"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="8" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/item_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/label_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/item_location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/label_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorAccent" />

        <fragment
            android:id="@+id/map"
            android:name="com.madein75.soccerbuddy.fragment.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            tools:layout="@layout/activity_map" />

    </LinearLayout>

    <Button
        android:id="@+id/button_join_match"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/join_match" />

</RelativeLayout>